<!--
Aryan Sood , N01393003, Section RNA
-->
<resources>
    <string name="app_name">Aryan Sood N01393003</string>
    <string name="menu_help_title">Help</string>
    <string name="menu_store_logo">logo</string>
    <string name="menu_usr_name">Aryan</string>
    <string name="help_redirect">https://www.apple.com/ca/</string>
    <string name="help_pizza">"Assignment 2 "</string>
    <string name="radio_label_piz">Pizza Pizza</string>
    <string name="radio_label_domi">Dominos</string>
    <string name="radio_label_nova">Pizza Nova</string>
    <string name="next">Next</string>
    <string name="welcome_msg">Welcome!!</string>
    <string name="select_a_store_msg">Please Select a store</string>
    <string name="store_name_piz">Pizza Pizza</string>
    <string name="store_name_nova">Pizza Nova</string>
    <string name="store_name_domi">Dominos</string>
    <string name="select_store_msg">Please select a store</string>
    <string name="boston_style_9_99">Boston Style $9.99</string>
    <string name="cheese_5_99">Margerita $5.99</string>
    <string name="chicago_style_12_99">Chicago Style $12.99</string>
    <string name="text_label_size">Select Pizza Size</string>
    <string name="small_4_50">Small $4.5</string>
    <string name="medium_6_5">Medium $6.5</string>
    <string name="large_8_5">Large $8.5</string>
    <string name="extra_toppings">Select Extra Toppings(atleast one)</string>
    <string name="chicken_50">Chicken + $1.0</string>
    <string name="red_pepper_50">Red Pepper +$0.50</string>
    <string name="continue_button">Next</string>
    <string name="pineapple_50">Pineapple +$0.50</string>
    <string name="onions_50">Onions +$1.0</string>
    <string name="text_label_type">Select Type</string>
    <string name="extra_cheese_50">Extra Cheese +$1.0</string>
    <string name="italian_15_99">Italian $15.99</string>
    <string name="boston_lael">Boston</string>
    <string name="chesse_label">Cheese</string>
    <string name="chicago_label">Chicago</string>
    <string name="italian_label">Italian</string>
    <string name="pizza_size_small">Small</string>
    <string name="pizza_size_med">Medium</string>
    <string name="pizza_size_lg">Large</string>
    <string name="top_chick">\"Chicken\"</string>
    <string name="top_R_pep">\"Pepper\"</string>
    <string name="top_pine">\"Pineapple\"</string>
    <string name="top_ext_cheese">\"Extra Cheese\"</string>
    <string name="top_oni">\"Onions\"</string>
    <string name="Review">Review Order</string>
    <string name="summary_label">Summary</string>
    <string name="total_label">Total</string>
    <string name="payment_info">Payment Info</string>
    <string name="place_order">Confirm Order</string>
    <string name="delivery_switch">Delivery</string>
    <string name="hint_name_on_credit_card">Name on Card</string>
    <string name="hint_credit_card_number_max_length_8">Card Number(5 dig)</string>
    <string name="hint_address">Address</string>
    <string name="CCname_3_error">Credit card name too short</string>
    <string name="CCnum_error">Credit Card Number too short</string>
    <string name="empty_field_error">Credit card empty</string>
    <string name="address_empty_error">Address empty</string>
    <string name="checkout_button">Checkout</string>
    <string name="del_msg">\nDelivery in 30min</string>
    <string name="pick_msg">\nReady for pickup in 20min</string>
    <string name="confirmed_order_msg">Order Confirmed!!!</string>
    <string name="final_dialog_dismiss">Dismiss</string>
    <string name="order_number">Order No:   </string>
    <string name="Style">Style:  </string>
    <string name="Size">\nSize:  </string>
    <string name="Toppings">\nToppings:</string>
    <string name="ttl">\nGross Total:</string>
    <string name="name">Name:</string>
    <string name="Card_num">\nCard Number: </string>
    <string name="addr">\nAddress: </string>
    <string name="sure">Plesse Make Sure that the details are correct</string>
    <string name="style">Style:  </string>
    <string name="size">\nSize:  </string>
    <string name="toppings">\nToppings:</string>
    <string name="tax">\nTax:</string>
    <string name="selsction">Incomplete Selection</string>
    <string name="p_no">tel:1234567890</string>
    <string name="charge">Delivery Charge: </string>
    <string name="Free">\" (FREE!)\"</string>
    <string name="zero">$0</string>
    <string name="radio_label_papa">Papa Johns</string>
    <string name="exit">Exit</string>
    <string name="exitmsg">Are you sure you want to exit??</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="province">\nProvince: </string>
    <string name="order_details">Order Details</string>
    <string name="order_payment">Payment Details</string>

    <string-array name="provinces">
        <item>Ontario</item>
        <item>British Columbia</item>
        <item>Alberta</item>
        <item>Quebec</item>
        <item>Manitoba</item>
        <item>NovaScotia</item>
        <item>New Brunswick</item>
        <item>Prince Edward Island</item>
        <item>Saskatchewan</item>
        <item>Newfoundland and Labrador</item>
    </string-array>
    <string-array name="stores">
        <item>Pizza Pizza</item>
        <item>Pizza Nova</item>
        <item>Dominos</item>
        <item>Papa Johns</item>
    </string-array>
</resources>