<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/AryanStoreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="250dp"
        android:layout_height="156dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AryanStoreName"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/AryanBoston"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boston_style_9_99" />

        <RadioButton
            android:id="@+id/AryanCheese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cheese_5_99" />

        <RadioButton
            android:id="@+id/AryanChicago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chicago_style_12_99" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="252dp"
        android:layout_height="171dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.082">

        <TextView
            android:id="@+id/AryanSizeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_label_size" />

        <RadioButton
            android:id="@+id/AryanSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/small_4_50" />

        <RadioButton
            android:id="@+id/AryanMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_6_5" />

        <RadioButton
            android:id="@+id/AryanhLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large_8_5" />

    </RadioGroup>

    <TextView
        android:id="@+id/AryanTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label_type"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757" />

    <TextView
        android:id="@+id/AryanToppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extra_toppings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.049" />

    <CheckBox
        android:id="@+id/AryanChick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chicken_50"
        app:layout_constraintEnd_toStartOf="@+id/Aryanpepper"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AryanToppings" />

    <CheckBox
        android:id="@+id/AryanOnions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="608dp"
        android:text="@string/onions_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />

    <CheckBox
        android:id="@+id/AryanPineapple"
        android:layout_width="141dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/pineapple_50"
        app:layout_constraintEnd_toStartOf="@+id/AryanExtraCheese"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AryanChick" />

    <CheckBox
        android:id="@+id/AryanExtraCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/extra_cheese_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Aryanpepper" />

    <CheckBox
        android:id="@+id/Aryanpepper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/red_pepper_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="64dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119"
        app:srcCompat="@drawable/boston" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/cheese" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="73dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        app:srcCompat="@drawable/chicago" />

</androidx.constraintlayout.widget.ConstraintLayout>