<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AryanActivity">

    <RadioGroup
        android:id="@+id/AryanStoreGroup"
        android:layout_width="220dp"
        android:layout_height="328dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573">

        <RadioButton
            android:id="@+id/AryanPizPiz"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:onClick="storeClick"
            android:text="@string/radio_label_piz" />

        <RadioButton
            android:id="@+id/AryanNova"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:onClick="storeClick"
            android:text="@string/radio_label_nova" />

        <RadioButton
            android:id="@+id/AryanDomin"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:onClick="storeClick"
            android:text="@string/radio_label_domi" />

    </RadioGroup>

    <Button
        android:id="@+id/AryanNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:onClick="onNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AryanStoreGroup"
        app:layout_constraintVertical_bias="0.623" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345"
        app:srcCompat="@drawable/pizpiz" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="124dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/dominos" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446"
        app:srcCompat="@drawable/pizzanova" />

    <TextView
        android:id="@+id/AryanWelcomeMsg"
        android:layout_width="174dp"
        android:layout_height="81dp"
        android:text="@string/welcome_msg"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/SelectStoreMsg"
        android:layout_width="180dp"
        android:layout_height="49dp"
        android:text="@string/select_a_store_msg"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/AryanStoreGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AryanWelcomeMsg"
        app:layout_constraintVertical_bias="0.482" />

</androidx.constraintlayout.widget.ConstraintLayout>