<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">


    <TextView
        android:id="@+id/AryanStoreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/SummaryLabel"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:text="@string/summary_label"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/Total_label"
        android:layout_width="61dp"
        android:layout_height="23dp"
        android:text="@string/total_label"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <TextView
        android:id="@+id/PaymentInfoLabel"
        android:layout_width="152dp"
        android:layout_height="31dp"
        android:text="@string/payment_info"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <ImageButton
        android:id="@+id/PlaceOrder"
        android:layout_width="133dp"
        android:layout_height="71dp"
        android:background="@drawable/right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <Spinner
        android:id="@+id/Provinces"
        android:layout_width="239dp"
        android:layout_height="26dp"
        android:layout_marginTop="84dp"
        android:entries="@array/provinces"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AryanCCNumber" />

    <Switch
        android:id="@+id/AryanDeliveryOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/delivery_switch"
        app:layout_constraintBottom_toTopOf="@+id/PlaceOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AryanCCNumber"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/AryanOrderSummary"
        android:layout_width="308dp"
        android:layout_height="83dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SummaryLabel" />

    <EditText
        android:id="@+id/AryanCCName"
        android:layout_width="386dp"
        android:layout_height="50dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ  "
        android:ems="10"
        android:hint="@string/hint_name_on_credit_card"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/AryanCCNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PaymentInfoLabel"
        app:layout_constraintVertical_bias="0.634" />

    <EditText
        android:id="@+id/AryanCCNumber"
        android:layout_width="388dp"
        android:layout_height="55dp"
        android:layout_marginTop="408dp"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/hint_credit_card_number_max_length_8"
        android:inputType="phone"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AryanAddress"
        android:layout_width="381dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Provinces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AryanCCNumber"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/AryanTotalAmount"
        android:layout_width="91dp"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/PaymentInfoLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AryanOrderSummary"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/DeliveryCharge"
        android:layout_width="134dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="172dp"
        app:layout_constraintEnd_toEndOf="@+id/AryanOrderSummary"
        app:layout_constraintTop_toTopOf="@+id/AryanOrderSummary" />

</androidx.constraintlayout.widget.ConstraintLayout>