<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity">

    <TextView
        android:id="@+id/finalOrderSummary"
        android:layout_width="359dp"
        android:layout_height="109dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <TextView
        android:id="@+id/FinalPaymentInfo"
        android:layout_width="365dp"
        android:layout_height="142dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalOrderSummary"
        app:layout_constraintVertical_bias="0.148" />

    <Button
        android:id="@+id/FinalCheckoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckout"
        android:text="@string/checkout_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />

    <TextView
        android:id="@+id/PayHere"
        android:layout_width="205dp"
        android:textStyle="bold"
        android:layout_height="54dp"
        android:text="@string/checkout_button"
        android:textColor="@color/blue"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="124dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="79dp"
        android:text="@string/sure"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/FinalCheckoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FinalPaymentInfo"
        app:layout_constraintVertical_bias="0.294" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="97dp"
        android:layout_height="19dp"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="24dp"
        android:text="@string/order_details"
        app:layout_constraintBottom_toTopOf="@+id/finalOrderSummary"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="13dp"
        android:text="@string/order_payment"
        app:layout_constraintBottom_toTopOf="@+id/FinalPaymentInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalOrderSummary"
        app:layout_constraintVertical_bias="0.714" />
</androidx.constraintlayout.widget.ConstraintLayout>